# rusqlite-gpkg

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: docs.yml  pages-demo.yml  test.yml
scripts/: generate_test_gpkg.sh
src/: conversions.rs  error.rs  gpkg.rs  lib.rs  ogc_sql.rs  sql_functions.rs  types.rs  vfs.rs
src/arrow/: attribute_reader.rs  attribute_writer.rs  mod.rs  reader.rs  writer.rs
src/gpkg/: attribute_row.rs  attribute_table.rs  batch_iterator.rs  feature.rs  gpkg.rs  layer.rs  mod.rs
src/gpkg/arrow/: mod.rs  reader.rs  writer.rs
src/gpkg/layer/: batch_iterator.rs
src/reader/: mod.rs
src/test/: test.gpkg  test_generated.gpkg
web/: README.md  index.html  main.js  styles.css  worker.js
web/wasm/: Cargo.toml
web/wasm/src/: io.rs  lib.rs
