[package]
name = "rusqlite-gpkg"
version = "0.1.0"
edition = "2024"

[dependencies]
geo-traits = { version = "0.3.0", default-features = false }
rusqlite = { version = "0.38.0", features = ["bundled", "functions", "serialize"] }
wkb = "0.9.2"
wkt = { version = "0.14", optional = true }

[features]
wkt = ["dep:wkt"]

[[bin]]
name = "read_gpkg"
path = "src/bin/read_gpkg.rs"
required-features = ["wkt"]

[dev-dependencies]
geo-types = "0.7"
wkt = "0.14"
