[package]
name = "rusqlite-gpkg"
description = "GeoPackage reader/writer built on top of rusqlite"
version = "0.0.1"
edition = "2024"
authors = ["Hiroaki Yutani"]
license = "MIT"
repository = "https://github.com/yutannihilation/rusqlite-gpkg/"

[dependencies]
geo-traits = { version = "0.3.0", default-features = false }
rusqlite = { version = "0.38.0", features = ["bundled", "functions", "serialize"] }
wkb = "0.9.2"
wkt = { version = "0.14", optional = true }

[features]
wkt = ["dep:wkt"]

[[bin]]
name = "read_gpkg"
path = "src/bin/read_gpkg.rs"
required-features = ["wkt"]

[[bin]]
name = "write_gpkg"
path = "src/bin/write_gpkg.rs"
required-features = ["wkt"]

[dev-dependencies]
geo-types = "0.7"
wkt = "0.14"
