[package]
name = "rusqlite-gpkg"
description = "GeoPackage reader/writer built on top of rusqlite"
version = "0.0.3"
edition = "2024"
authors = ["Hiroaki Yutani"]
license = "MIT"
repository = "https://github.com/yutannihilation/rusqlite-gpkg/"
include = ["src/**", "Cargo.toml", "README.md", "CHANGELOG.md"]

[dependencies]
geo-traits = { version = "0.3.0", default-features = false }
rusqlite = { version = "0.38.0", features = ["bundled", "functions", "serialize"] }
wkb = "0.9.2"

# For examples
wkt = { version = "0.14", optional = true }

# For allow conversions
arrow-array = { version = "57.3.0", optional = true }
arrow-schema = { version = "57.2.0", optional = true }
geoarrow-schema = { version = "0.7.0", optional = true }
geoarrow-array = { version = "0.7.0", optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]
sqlite-wasm-rs = "0.5.2"


[features]
wkt = ["dep:wkt"]
arrow = ["dep:arrow-array", "dep:arrow-schema", "dep:geoarrow-array", "dep:geoarrow-schema"]

[[bin]]
name = "read_gpkg"
path = "src/bin/read_gpkg.rs"
required-features = ["wkt"]

[[bin]]
name = "write_gpkg"
path = "src/bin/write_gpkg.rs"
required-features = ["wkt"]

[dev-dependencies]
geo-types = "0.7"
wkt = "0.14"

[package.metadata.docs.rs]
features = ["arrow"]
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]
rustdoc-args = ["--cfg", "docsrs"]
